--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -937,10 +937,10 @@
     <string name="MessageRecord_left_group">You have left the group.</string>
     <string name="MessageRecord_you_updated_group">You updated the group.</string>
     <string name="MessageRecord_the_group_was_updated">The group was updated.</string>
-    <string name="MessageRecord_you_called_date">You called • %1$s</string>
-    <string name="MessageRecord_missed_call_date">Missed call • %1$s</string>
+    <string name="MessageRecord_you_called_date">You called · %1$s</string>
+    <string name="MessageRecord_missed_call_date">Missed call · %1$s</string>
     <string name="MessageRecord_s_updated_group">%s updated the group.</string>
-    <string name="MessageRecord_s_called_you_date">%1$s called you • %2$s</string>
+    <string name="MessageRecord_s_called_you_date">%1$s called you · %2$s</string>
     <string name="MessageRecord_called_s">Called %s</string>
     <string name="MessageRecord_s_joined_signal">%s is on Signal!</string>
     <string name="MessageRecord_you_disabled_disappearing_messages">You disabled disappearing messages.</string>
